# ffi_rocket_server

./: Cargo.toml  readme.md
example/: ffi_cpp_main.cpp
src/: extern_function.rs  lib.rs  manage.rs  route.rs  service.rs
src/manage/: ffi_util.rs  handler.rs  resource.rs
src/model/: response.rs
src/route/: data.rs  error.rs  manage.rs
src/service/: cim_data.rs
