[package]
name = "sever"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
futures = "0.3"
async-ffi = "0.4.0"
tokio = { version = "1.21.2", features = ["full"] }
warp = "0.3"
reqwest = "0.11.12"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[lib]
crate-type = ["cdylib"]
